@@ -1,16 +1,22 @@
+-XX:ReservedCodeCacheSize=240m
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-Dawt.useSystemAAFontSettings=lcd
+-Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
+
 -ea
 -server
 -Xms16g
 -Xmx16g
 -Xss64m
--XX:PermSize=1024m
--XX:MaxPermSize=4g
 -XX:+DoEscapeAnalysis
 -XX:+UseCompressedOops
--XX:+UnlockExperimentalVMOptions
 -XX:+UseConcMarkSweepGC
 -XX:LargePageSizeInBytes=256m
--XX:ReservedCodeCacheSize=96m
 -XX:+UseCodeCacheFlushing
 -XX:+UseCompressedOops
 -XX:ParallelGCThreads=8
@@ -23,15 +29,11 @@
 -XX:+AggressiveOpts
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+CMSClassUnloadingEnabled
--XX:+CMSPermGenSweepingEnabled
 -XX:CMSInitiatingOccupancyFraction=60
 -XX:+CMSClassUnloadingEnabled
 -XX:+CMSParallelRemarkEnabled
 -XX:+UseAdaptiveGCBoundary
--XX:+UseSplitVerifier
 -XX:CompileThreshold=10000
--XX:+UseCompressedStrings
 -XX:+OptimizeStringConcat
--XX:+UseStringCache
 -XX:+UseFastAccessorMethods
--XX:+UnlockDiagnosticVMOptions
+
